--- a/css/header.css
+++ b/css/header.css
@@ -1,3 +1,9 @@
+.give-border{
+	border: 1px solid #ddd;
+	border-radius: 20px;
+	margin-top: 20px;
+	height: 300px;
+}
 .navigation{
 	margin-top: 50px;
 	opacity: 0;
@@ -32,6 +38,7 @@
 #header .logo-moc{
 	width: 100px;
 	position: relative;
+	margin-left: 30px;
 	z-index: 2;
 	cursor: pointer;
 }
@@ -39,7 +46,7 @@
 	width: 100px;
 }
 #header .left-wing{
-	margin-left: -10px;
+	margin-left: 20px;
 	margin-top: 50px;
 	-o-transform: rotate(-90deg);
 	-moz-transform: rotate(-90deg);
